--- a/miniprojects/project2/test_jupyter.ipynb
+++ b/miniprojects/project2/test_jupyter.ipynb
@@ -244,10 +244,12 @@
     "def maxer(data):\n",
     "    d_map = []\n",
     "    for i in [.1,.2,.3,.4,.5,.6,.7,.8,.9]:\n",
-    "        _map = {'mod_acc': None,'orig_acc': None,'ratio': i}\n",
+    "        _map = {'ratio': i}\n",
     "        _d = data[data.ratio==i]\n",
-    "        _map['mod_acc']=_d.loc[_d['mod_acc'].idxmax()]['mod_acc']\n",
     "        _map['orig_acc']=_d.loc[_d['orig_acc'].idxmax()]['orig_acc']\n",
+    "        _map['with_angs_acc']=_d.loc[_d['with_angs_acc'].idxmax()]['with_angs_acc']\n",
+    "        _map['with_both_acc']=_d.loc[_d['with_both_acc'].idxmax()]['with_both_acc']\n",
+    "        _map['with_dist_acc']=_d.loc[_d['with_dist_acc'].idxmax()]['with_dist_acc']\n",
     "        d_map.append(_map)\n",
     "    return pd.DataFrame(d_map)\n",
     "maxer(data)"
