--- a/miniprojects/project2/test_jupyter.ipynb
+++ b/miniprojects/project2/test_jupyter.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -24,75 +24,138 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       mod_acc   orig_acc  ratio\n",
-      "0    37.448560  35.802469    0.1\n",
-      "1    50.000000  50.462963    0.2\n",
-      "2    59.259259  58.730159    0.3\n",
-      "3    63.580247  69.135802    0.4\n",
-      "4    65.185185  66.666667    0.5\n",
-      "5    73.148148  75.000000    0.6\n",
-      "6    74.074074  71.604938    0.7\n",
-      "7    72.222222  75.925926    0.8\n",
-      "8    77.777778  66.666667    0.9\n",
-      "9    34.567901  30.864198    0.1\n",
-      "10   47.685185  53.240741    0.2\n",
-      "11   68.783069  64.021164    0.3\n",
-      "12   69.753086  69.753086    0.4\n",
-      "13   62.222222  67.407407    0.5\n",
-      "14   74.074074  77.777778    0.6\n",
-      "15   70.370370  74.074074    0.7\n",
-      "16   74.074074  74.074074    0.8\n",
-      "17   81.481481  81.481481    0.9\n",
-      "18   35.802469  31.687243    0.1\n",
-      "19   44.907407  58.333333    0.2\n",
-      "20   59.788360  66.137566    0.3\n",
-      "21   58.641975  65.432099    0.4\n",
-      "22   62.222222  66.666667    0.5\n",
-      "23   68.518519  74.074074    0.6\n",
-      "24   71.604938  74.074074    0.7\n",
-      "25   75.925926  72.222222    0.8\n",
-      "26   70.370370  70.370370    0.9\n",
-      "27   30.864198  39.094650    0.1\n",
-      "28   50.925926  51.851852    0.2\n",
-      "29   67.724868  70.370370    0.3\n",
-      "..         ...        ...    ...\n",
-      "78   69.135802  69.135802    0.7\n",
-      "79   75.925926  72.222222    0.8\n",
-      "80   70.370370  66.666667    0.9\n",
-      "81   33.333333  33.744856    0.1\n",
-      "82   57.407407  53.240741    0.2\n",
-      "83   60.846561  62.962963    0.3\n",
-      "84   69.753086  67.283951    0.4\n",
-      "85   67.407407  64.444444    0.5\n",
-      "86   73.148148  71.296296    0.6\n",
-      "87   71.604938  67.901235    0.7\n",
-      "88   81.481481  74.074074    0.8\n",
-      "89   70.370370  77.777778    0.9\n",
-      "90   37.037037  32.921811    0.1\n",
-      "91   45.370370  50.462963    0.2\n",
-      "92   60.317460  64.021164    0.3\n",
-      "93   70.987654  72.839506    0.4\n",
-      "94   66.666667  66.666667    0.5\n",
-      "95   76.851852  75.000000    0.6\n",
-      "96   75.308642  69.135802    0.7\n",
-      "97   74.074074  75.925926    0.8\n",
-      "98   77.777778  77.777778    0.9\n",
-      "99   36.213992  31.687243    0.1\n",
-      "100  46.759259  52.314815    0.2\n",
-      "101  62.962963  64.550265    0.3\n",
-      "102  67.901235  66.666667    0.4\n",
-      "103  61.481481  62.962963    0.5\n",
-      "104  71.296296  69.444444    0.6\n",
-      "105  74.074074  70.370370    0.7\n",
-      "106  75.925926  70.370370    0.8\n",
-      "107  66.666667  74.074074    0.9\n",
+      "      orig_acc  orin_acc  ratio  with_ang_acc  with_angs_acc  with_both_acc  \\\n",
+      "0    37.448560       NaN    0.1           NaN      38.271605      23.456790   \n",
+      "1    48.611111       NaN    0.2           NaN      50.462963      55.555556   \n",
+      "2    57.671958       NaN    0.3           NaN      60.846561      60.846561   \n",
+      "3    62.962963       NaN    0.4           NaN      72.222222      63.580247   \n",
+      "4    71.851852       NaN    0.5           NaN      65.185185      64.444444   \n",
+      "5    71.296296       NaN    0.6           NaN      71.296296      73.148148   \n",
+      "6    71.604938       NaN    0.7           NaN      72.839506      71.604938   \n",
+      "7    72.222222       NaN    0.8           NaN      81.481481      74.074074   \n",
+      "8    74.074074       NaN    0.9           NaN      77.777778      74.074074   \n",
+      "9    29.218107       NaN    0.1           NaN      32.510288      35.802469   \n",
+      "10   53.703704       NaN    0.2           NaN      44.444444      50.925926   \n",
+      "11   66.666667       NaN    0.3           NaN      64.021164      62.962963   \n",
+      "12   75.308642       NaN    0.4           NaN      75.925926      65.432099   \n",
+      "13   62.962963       NaN    0.5           NaN      64.444444      67.407407   \n",
+      "14   75.925926       NaN    0.6           NaN      74.074074      67.592593   \n",
+      "15   76.543210       NaN    0.7           NaN      71.604938      67.901235   \n",
+      "16   75.925926       NaN    0.8           NaN      70.370370      77.777778   \n",
+      "17   77.777778       NaN    0.9           NaN      74.074074      77.777778   \n",
+      "18   30.864198       NaN    0.1           NaN      37.448560      24.691358   \n",
+      "19   47.685185       NaN    0.2           NaN      48.611111      50.000000   \n",
+      "20   58.201058       NaN    0.3           NaN      59.259259      64.021164   \n",
+      "21   67.283951       NaN    0.4           NaN      67.283951      70.370370   \n",
+      "22   65.185185       NaN    0.5           NaN      72.592593      66.666667   \n",
+      "23   73.148148       NaN    0.6           NaN      72.222222      74.074074   \n",
+      "24   69.135802       NaN    0.7           NaN      70.370370      75.308642   \n",
+      "25   77.777778       NaN    0.8           NaN      77.777778      70.370370   \n",
+      "26   66.666667       NaN    0.9           NaN      74.074074      77.777778   \n",
+      "27   30.864198       NaN    0.1           NaN      25.925926      30.452675   \n",
+      "28   55.555556       NaN    0.2           NaN      40.740741      46.296296   \n",
+      "29   55.026455       NaN    0.3           NaN      63.492063      66.137566   \n",
+      "..         ...       ...    ...           ...            ...            ...   \n",
+      "240  66.666667       NaN    0.7           NaN      67.901235      72.839506   \n",
+      "241  77.777778       NaN    0.8           NaN      83.333333      75.925926   \n",
+      "242  85.185185       NaN    0.9           NaN      70.370370      81.481481   \n",
+      "243  25.102881       NaN    0.1           NaN      30.864198      37.037037   \n",
+      "244  50.000000       NaN    0.2           NaN      54.166667      47.685185   \n",
+      "245  64.550265       NaN    0.3           NaN      62.433862      64.021164   \n",
+      "246  68.518519       NaN    0.4           NaN      68.518519      68.518519   \n",
+      "247  65.925926       NaN    0.5           NaN      66.666667      62.222222   \n",
+      "248  70.370370       NaN    0.6           NaN      70.370370      72.222222   \n",
+      "249  71.604938       NaN    0.7           NaN      72.839506      75.308642   \n",
+      "250  74.074074       NaN    0.8           NaN      72.222222      77.777778   \n",
+      "251  74.074074       NaN    0.9           NaN      81.481481      85.185185   \n",
+      "252  35.802469       NaN    0.1           NaN      34.979424      31.687243   \n",
+      "253  50.462963       NaN    0.2           NaN      55.092593      55.555556   \n",
+      "254  64.021164       NaN    0.3           NaN      59.259259      57.671958   \n",
+      "255  67.283951       NaN    0.4           NaN      72.839506      60.493827   \n",
+      "256  74.074074       NaN    0.5           NaN      66.666667      70.370370   \n",
+      "257  74.074074       NaN    0.6           NaN      70.370370      75.925926   \n",
+      "258  71.604938       NaN    0.7           NaN      69.135802      66.666667   \n",
+      "259  75.925926       NaN    0.8           NaN      74.074074      79.629630   \n",
+      "260  74.074074       NaN    0.9           NaN      81.481481      74.074074   \n",
+      "261  29.629630       NaN    0.1           NaN      27.983539      37.037037   \n",
+      "262  52.777778       NaN    0.2           NaN      43.518519      53.240741   \n",
+      "263  69.841270       NaN    0.3           NaN      57.671958      70.899471   \n",
+      "264  64.814815       NaN    0.4           NaN      65.432099      69.135802   \n",
+      "265  75.555556       NaN    0.5           NaN      65.185185      65.185185   \n",
+      "266  74.074074       NaN    0.6           NaN      74.074074      72.222222   \n",
+      "267  79.012346       NaN    0.7           NaN      69.135802      69.135802   \n",
+      "268  75.925926       NaN    0.8           NaN      72.222222      75.925926   \n",
+      "269  77.777778       NaN    0.9           NaN      74.074074      85.185185   \n",
       "\n",
-      "[108 rows x 3 columns]\n"
+      "     with_dist_acc  \n",
+      "0        32.510288  \n",
+      "1        57.407407  \n",
+      "2        56.613757  \n",
+      "3        66.666667  \n",
+      "4        69.629630  \n",
+      "5        76.851852  \n",
+      "6        74.074074  \n",
+      "7        77.777778  \n",
+      "8        77.777778  \n",
+      "9        27.160494  \n",
+      "10       46.296296  \n",
+      "11       68.253968  \n",
+      "12       62.345679  \n",
+      "13       68.888889  \n",
+      "14       69.444444  \n",
+      "15       72.839506  \n",
+      "16       68.518519  \n",
+      "17       77.777778  \n",
+      "18       34.567901  \n",
+      "19       50.462963  \n",
+      "20       61.375661  \n",
+      "21       66.049383  \n",
+      "22       66.666667  \n",
+      "23       75.000000  \n",
+      "24       72.839506  \n",
+      "25       83.333333  \n",
+      "26       85.185185  \n",
+      "27       37.037037  \n",
+      "28       50.925926  \n",
+      "29       57.142857  \n",
+      "..             ...  \n",
+      "240      69.135802  \n",
+      "241      74.074074  \n",
+      "242      74.074074  \n",
+      "243      29.218107  \n",
+      "244      55.092593  \n",
+      "245      64.021164  \n",
+      "246      67.283951  \n",
+      "247      71.851852  \n",
+      "248      71.296296  \n",
+      "249      67.901235  \n",
+      "250      75.925926  \n",
+      "251      74.074074  \n",
+      "252      30.041152  \n",
+      "253      58.333333  \n",
+      "254      57.142857  \n",
+      "255      77.160494  \n",
+      "256      66.666667  \n",
+      "257      73.148148  \n",
+      "258      72.839506  \n",
+      "259      72.222222  \n",
+      "260      81.481481  \n",
+      "261      31.275720  \n",
+      "262      51.851852  \n",
+      "263      61.375661  \n",
+      "264      67.901235  \n",
+      "265      63.703704  \n",
+      "266      75.000000  \n",
+      "267      69.135802  \n",
+      "268      74.074074  \n",
+      "269      77.777778  \n",
+      "\n",
+      "[270 rows x 7 columns]\n"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv('impromement.scv').drop('Unnamed: 0',1)\n",
+    "data = pd.read_csv('impromeme').drop('Unnamed: 0',1)\n",
     "print data"
    ]
   },
@@ -145,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -158,84 +221,104 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>mod_acc</th>\n",
        "      <th>orig_acc</th>\n",
        "      <th>ratio</th>\n",
+       "      <th>with_angs_acc</th>\n",
+       "      <th>with_both_acc</th>\n",
+       "      <th>with_dist_acc</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>37.448560</td>\n",
-       "      <td>39.094650</td>\n",
+       "      <td>42.386831</td>\n",
        "      <td>0.1</td>\n",
+       "      <td>48.148148</td>\n",
+       "      <td>41.975309</td>\n",
+       "      <td>38.271605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>57.407407</td>\n",
        "      <td>58.333333</td>\n",
        "      <td>0.2</td>\n",
+       "      <td>58.796296</td>\n",
+       "      <td>56.481481</td>\n",
+       "      <td>58.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>68.783069</td>\n",
-       "      <td>70.370370</td>\n",
+       "      <td>73.015873</td>\n",
        "      <td>0.3</td>\n",
+       "      <td>71.957672</td>\n",
+       "      <td>70.899471</td>\n",
+       "      <td>68.783069</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>72.839506</td>\n",
-       "      <td>72.839506</td>\n",
+       "      <td>75.925926</td>\n",
        "      <td>0.4</td>\n",
+       "      <td>75.925926</td>\n",
+       "      <td>74.074074</td>\n",
+       "      <td>78.395062</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>69.629630</td>\n",
-       "      <td>72.592593</td>\n",
+       "      <td>75.555556</td>\n",
        "      <td>0.5</td>\n",
+       "      <td>74.814815</td>\n",
+       "      <td>74.814815</td>\n",
+       "      <td>74.074074</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>76.851852</td>\n",
-       "      <td>77.777778</td>\n",
+       "      <td>79.629630</td>\n",
        "      <td>0.6</td>\n",
+       "      <td>77.777778</td>\n",
+       "      <td>77.777778</td>\n",
+       "      <td>79.629630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>75.308642</td>\n",
-       "      <td>77.777778</td>\n",
+       "      <td>79.012346</td>\n",
        "      <td>0.7</td>\n",
+       "      <td>77.777778</td>\n",
+       "      <td>75.308642</td>\n",
+       "      <td>79.012346</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>81.481481</td>\n",
-       "      <td>79.629630</td>\n",
+       "      <td>83.333333</td>\n",
        "      <td>0.8</td>\n",
+       "      <td>83.333333</td>\n",
+       "      <td>81.481481</td>\n",
+       "      <td>83.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>92.592593</td>\n",
-       "      <td>81.481481</td>\n",
+       "      <td>88.888889</td>\n",
        "      <td>0.9</td>\n",
+       "      <td>85.185185</td>\n",
+       "      <td>88.888889</td>\n",
+       "      <td>92.592593</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     mod_acc   orig_acc  ratio\n",
-       "0  37.448560  39.094650    0.1\n",
-       "1  57.407407  58.333333    0.2\n",
-       "2  68.783069  70.370370    0.3\n",
-       "3  72.839506  72.839506    0.4\n",
-       "4  69.629630  72.592593    0.5\n",
-       "5  76.851852  77.777778    0.6\n",
-       "6  75.308642  77.777778    0.7\n",
-       "7  81.481481  79.629630    0.8\n",
-       "8  92.592593  81.481481    0.9"
+       "    orig_acc  ratio  with_angs_acc  with_both_acc  with_dist_acc\n",
+       "0  42.386831    0.1      48.148148      41.975309      38.271605\n",
+       "1  58.333333    0.2      58.796296      56.481481      58.333333\n",
+       "2  73.015873    0.3      71.957672      70.899471      68.783069\n",
+       "3  75.925926    0.4      75.925926      74.074074      78.395062\n",
+       "4  75.555556    0.5      74.814815      74.814815      74.074074\n",
+       "5  79.629630    0.6      77.777778      77.777778      79.629630\n",
+       "6  79.012346    0.7      77.777778      75.308642      79.012346\n",
+       "7  83.333333    0.8      83.333333      81.481481      83.333333\n",
+       "8  88.888889    0.9      85.185185      88.888889      92.592593"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
